# EvoNHI

./: README.md
EvoNHI_MVP/: .gitignore  README.md  evonhi_saas.db.bak  pyproject.toml  requirements.txt
EvoNHI_MVP/app/: __init__.py  auth_utils.py  config.py  db.py  http_middleware.py  main.py  models.py  observability.py  paths.py  schemas.py  security.py  worker.py
EvoNHI_MVP/app/api/: __init__.py  routes.py
EvoNHI_MVP/app/domain/: __init__.py  analysis_models.py
EvoNHI_MVP/app/engine/: __init__.py  graph_builder.py  manifest_loader.py  optimizer.py  path_analysis.py  remediation.py
EvoNHI_MVP/app/services/: __init__.py  access_control.py  analysis_service.py  audit_service.py  auth_service.py  onboarding.py  reporting.py  telemetry_service.py
EvoNHI_MVP/app/ui/: __init__.py  dashboard.py
EvoNHI_MVP/data/demo/manifests/: 00-namespaces.yaml  10-service-accounts.yaml  20-rbac.yaml  30-secrets.yaml  40-workloads.yaml
EvoNHI_MVP/docs/: ARCHITECTURE.md  PROJECT_SOUL.md  WHY_SAAS.md
EvoNHI_MVP/scripts/: seed_demo.py
EvoNHI_MVP/tests/: test_engine.py  test_engine_semantics.py  test_onboarding_analysis.py
